[gd_scene load_steps=49 format=3 uid="uid://dvpthewkuttia"]

[ext_resource type="Script" path="res://player/PC.gd" id="1_fhjl8"]
[ext_resource type="Material" uid="uid://b5sfgjat7dyv0" path="res://character/character shaders/pc_material.tres" id="1_tkqss"]
[ext_resource type="Texture2D" uid="uid://ckk50b1g4byk4" path="res://assets/Small-8-Direction-Characters_by_AxulArt/Small-8-Direction-Characters_by_AxulArt.png" id="2_c4731"]
[ext_resource type="Resource" uid="uid://dhlms7hwnjm" path="res://player/PC resources/Gladiator.tres" id="2_pipyw"]
[ext_resource type="Script" path="res://player/movement controller/MovementController.gd" id="3_bxr2l"]
[ext_resource type="PackedScene" uid="uid://coo8juutpxbgw" path="res://character/character indicator/Indicator.tscn" id="4_0yxy1"]
[ext_resource type="Script" path="res://character/action machine/ActionManager.gd" id="4_tfyyi"]
[ext_resource type="PackedScene" uid="uid://cndercnoyvxu3" path="res://player/PC actions/Gladiator/Attack.tscn" id="5_52j7o"]
[ext_resource type="Texture2D" uid="uid://mno3hwmdd5th" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_idle_anim_f0.png" id="6_36fan"]
[ext_resource type="PackedScene" uid="uid://bftq7opuyn0au" path="res://player/PC actions/Gladiator/Parry.tscn" id="7_aqu00"]
[ext_resource type="Texture2D" uid="uid://dq1eonvsbsfm2" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_idle_anim_f1.png" id="7_lntjo"]
[ext_resource type="Texture2D" uid="uid://l6e02162gct7" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_idle_anim_f2.png" id="8_jvllg"]
[ext_resource type="Script" path="res://player/PC states/Default.gd" id="9_2uo28"]
[ext_resource type="Script" path="res://character/state machine/State Manager.gd" id="9_biyni"]
[ext_resource type="Texture2D" uid="uid://duk3a728e5wyb" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_idle_anim_f3.png" id="9_o4lem"]
[ext_resource type="Texture2D" uid="uid://dk1us4wxb7ab8" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_run_anim_f0.png" id="10_oyttj"]
[ext_resource type="Script" path="res://character/state machine/State.gd" id="10_wvem7"]
[ext_resource type="Texture2D" uid="uid://b1vnjab72v8lq" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_run_anim_f1.png" id="11_4s4f8"]
[ext_resource type="Texture2D" uid="uid://bbacjgfm1f6hd" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_run_anim_f2.png" id="12_8dbj7"]
[ext_resource type="Script" path="res://character/state machine/character states/Dash.gd" id="12_fgoqn"]
[ext_resource type="Texture2D" uid="uid://cg276xwxjs0t" path="res://assets/0x72_DungeonTilesetII_v1.7/frames/knight_f_run_anim_f3.png" id="13_gcvg5"]
[ext_resource type="SpriteFrames" uid="uid://b0686be3mwgj8" path="res://player/PC resources/action spriteframes/Eggshell.tres" id="14_6ls5k"]
[ext_resource type="Script" path="res://player/PC states/PC_Idle.gd" id="14_umevl"]
[ext_resource type="Resource" uid="uid://b7bgoqugry1a2" path="res://player/PC resources/action resources/Gladiator/Attack.tres" id="17_canuy"]
[ext_resource type="PackedScene" uid="uid://dufbyrveswvnq" path="res://player/PC actions/Gladiator/Boost.tscn" id="18_rj0lb"]
[ext_resource type="Resource" uid="uid://dqcrwnoxdxlic" path="res://player/PC resources/action resources/Gladiator/Parry.tres" id="19_vicj7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0m35v"]
radius = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0n5gx"]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_40f7g"]
atlas = ExtResource("2_c4731")
region = Rect2(0, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xmhf"]
atlas = ExtResource("2_c4731")
region = Rect2(16, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_csi4p"]
atlas = ExtResource("2_c4731")
region = Rect2(32, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekloh"]
atlas = ExtResource("2_c4731")
region = Rect2(48, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwoll"]
atlas = ExtResource("2_c4731")
region = Rect2(64, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dxi7"]
atlas = ExtResource("2_c4731")
region = Rect2(80, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1b2"]
atlas = ExtResource("2_c4731")
region = Rect2(96, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vtx3"]
atlas = ExtResource("2_c4731")
region = Rect2(112, 48, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qrtjn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40f7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xmhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csi4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekloh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwoll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dxi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vtx3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_36fan")
}, {
"duration": 1.0,
"texture": ExtResource("7_lntjo")
}, {
"duration": 1.0,
"texture": ExtResource("8_jvllg")
}, {
"duration": 1.0,
"texture": ExtResource("9_o4lem")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_oyttj")
}, {
"duration": 1.0,
"texture": ExtResource("11_4s4f8")
}, {
"duration": 1.0,
"texture": ExtResource("12_8dbj7")
}, {
"duration": 1.0,
"texture": ExtResource("13_gcvg5")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_l80gf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xbyvt"]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.8, 0.3, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0823529, 0.811765, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6ljb5"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.952941, 0.168627, 0.270588, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.8, 1.0, 0.8, 1.0, 0.8, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.785398, 1.5708]
}

[sub_resource type="Animation" id="Animation_wt80u"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3y3sg"]
resource_name = "move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vunnn"]
_data = {
"RESET": SubResource("Animation_l80gf"),
"dash": SubResource("Animation_xbyvt"),
"death": SubResource("Animation_6ljb5"),
"idle": SubResource("Animation_wt80u"),
"move": SubResource("Animation_3y3sg")
}

[sub_resource type="Animation" id="Animation_we80j"]
length = 0.001

[sub_resource type="Animation" id="Animation_6y6ht"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.5, 1.0, 0.5, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ylo1a"]
resource_name = "eggshell"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectsAnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"eggshell"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectsAnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10, 11, 12, 13, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EffectsAnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_6bx8b"]
resource_name = "heal"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.180392, 0.921569, 0.54902, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3pg2o"]
_data = {
"RESET": SubResource("Animation_we80j"),
"damage": SubResource("Animation_6y6ht"),
"eggshell": SubResource("Animation_ylo1a"),
"heal": SubResource("Animation_6bx8b")
}

[node name="Gladiator" type="CharacterBody2D"]
material = ExtResource("1_tkqss")
collision_layer = 2
collision_mask = 3
script = ExtResource("1_fhjl8")
character_resource = ExtResource("2_pipyw")

[node name="Indicator" parent="." instance=ExtResource("4_0yxy1")]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_0m35v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0n5gx")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_qrtjn")
animation = &"idle"

[node name="EffectsAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("14_6ls5k")
animation = &"eggshell"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vunnn")
}

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3pg2o")
}

[node name="MovementController" type="Node" parent="." node_paths=PackedStringArray("parent", "anim")]
script = ExtResource("3_bxr2l")
parent = NodePath("..")
anim = NodePath("../AnimationPlayer")

[node name="ActionManager" type="Node" parent="." node_paths=PackedStringArray("parent", "indicator", "basic_action", "secondary_action", "special_action")]
script = ExtResource("4_tfyyi")
parent = NodePath("..")
indicator = NodePath("../Indicator")
basic_action = NodePath("Attack")
secondary_action = NodePath("Parry")
special_action = NodePath("Boost")

[node name="Attack" parent="ActionManager" instance=ExtResource("5_52j7o")]
action_resource = ExtResource("17_canuy")

[node name="Parry" parent="ActionManager" instance=ExtResource("7_aqu00")]
action_resource = ExtResource("19_vicj7")

[node name="Boost" parent="ActionManager" instance=ExtResource("18_rj0lb")]

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("initial_state", "parent", "action_manager", "indicator")]
script = ExtResource("9_biyni")
initial_state = NodePath("Default")
parent = NodePath("..")
action_manager = NodePath("../ActionManager")
indicator = NodePath("../Indicator")

[node name="Default" type="Node" parent="StateManager" node_paths=PackedStringArray("movement_controller", "dash_state", "dead_state")]
script = ExtResource("9_2uo28")
movement_controller = NodePath("../../MovementController")
dash_state = NodePath("../Dash")
dead_state = NodePath("../Dead")

[node name="Dead" type="Node" parent="StateManager"]
script = ExtResource("10_wvem7")
anim_key = "death"
revive = true

[node name="Dash" type="Node" parent="StateManager" node_paths=PackedStringArray("movement_controller", "default_state")]
script = ExtResource("12_fgoqn")
movement_controller = NodePath("../../MovementController")
default_state = NodePath("../Default")
anim_key = "dash"

[node name="Idle" type="Node" parent="StateManager" node_paths=PackedStringArray("movement_controller")]
script = ExtResource("14_umevl")
movement_controller = NodePath("../../MovementController")

[connection signal="body_entered" from="DetectionArea" to="StateManager/Idle" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateManager/Idle" method="_on_detection_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateManager/Dash" method="_on_animation_player_animation_finished"]
[connection signal="Transition" from="StateManager/Default" to="StateManager" method="_set_current_state"]
[connection signal="Transition" from="StateManager/Dead" to="StateManager" method="_set_current_state"]
[connection signal="Transition" from="StateManager/Dash" to="StateManager" method="_set_current_state"]
[connection signal="Transition" from="StateManager/Idle" to="StateManager" method="_set_current_state"]
